# tauri-hello-world

./: .gitignore  backend-.spec  backend.spec  package-lock.json  package.json  tauri_mcp_architecture.md
.cargo/: config.toml
.github/workflows/: release.yml
backend/: main.py
scripts/: build-backend.cjs  setup-python.js  setup_embedded_python.py
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/mcp_server/: requirements.txt  server.py  test_mcp.py
src-tauri/resources/mcp_server/tools/: etabs.py  excel.py  sap2000.py  tekla_sd.py  word.py
src-tauri/src/: lib.rs  main.rs
