[package]
name = "tauri-hello-world"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_hello_world_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── PyO3 — embeds CPython for in-process MCP server ──────────────────────────
# The bundled Python interpreter is located at:
#   src-tauri/resources/python/
# and is set up by running:
#   node scripts/setup-python.js
#
# PYO3_PYTHON is written to .cargo/config.toml by setup-python.js.
pyo3 = { version = "0.23", features = [] }
flate2 = "1.0"
tar = "0.4"
